# Linux_Kernel_Debugging_Guide

./: README.md
Rock-3_Model-B/: Core_Debugging_Tools-Commands.txt  Makefile  Structure.txt  Verification_Matrix.txt
Rock-3_Model-B/Linux_Kernel_Debugging_Guide-main/: README.md  perf.md  strace.md
Rock-3_Model-B/configs/: ftrace-config  kernel-config  perf-config  systemtap.conf
Rock-3_Model-B/configs/sysctl/: 99-rock3-debug.conf
Rock-3_Model-B/docker/: Commands.txt  Dockerfile  docker-compose.yml  entrypoint.sh  use.txt
Rock-3_Model-B/docs/: debugging-guide.md  ftrace-guide.md  quick-reference.md
Rock-3_Model-B/examples/: Run.txt  ftrace-examples.sh  perf-examples.sh  strace-examples.sh
Rock-3_Model-B/scripts/: build-debug-workflow.sh
Rock-3_Model-B/scripts/debug/: trace-peripheral.sh
Rock-3_Model-B/scripts/monitor/: monitor-ddr.sh
Rock-3_Model-B/src/applications/: CMakeLists.txt
Rock-3_Model-B/src/applications/src/: hardware.cpp  hardware.h  main.cpp  version.h
Rock-3_Model-B/src/drivers/: README.md
Rock-3_Model-B/src/kernel/: Makefile
Rock-3_Model-B/src/modules/gpio/: Makefile  gpio-driver.c
Rock-3_Model-B/src/modules/hello/: Makefile  hello.c  hello.h
Rock-3_Model-B/test/: Makefile  Test_Scripts_Executable.txt  run-all-tests.sh  test-performance.sh  test-peripheral.sh  test-system.sh
Rock-3_Model-B/traces/: README.md  Viewing_Traces.txt  collect-all.sh  script_execute.txt
Rock-3_Model-B/traces/perf/: cpu.data  ddr.data
